--- a/action.yml
+++ b/action.yml
@@ -6,8 +6,11 @@ inputs:
     required: true
     description: "jira api"
   BRANCH_NAME:
-    required: true
+    required: false
     description: "branch name with jira issue key"
+  GITHUB_TOKEN:
+    required: true
+    description: "github action for authentication"
 runs:
   using: 'node16'
   main: 'dist/index.js'
