--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.8.2",
+    "@actions/github": "^5.0.3",
     "axios": "^0.27.2"
   },
   "devDependencies": {
