--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,4 @@ jobs:
           JIRA_ISSUE_API_URL: ${{secrets.JIRA_ISSUE_API_URL}}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           BRANCH_NAME: feat/TO-169-branch-name
+          FETCH_ON_MERGE_PR: false 
