--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
   GITHUB_TOKEN:
     required: true
     description: "github action for authentication"
+  FETCH_ON_MERGE_PR:
+    required: false
+    description: "fetch issue on merging pr to another branch"
+    default: "fetch issue on push"
 runs:
   using: 'node16'
   main: 'dist/index.js'
