--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pr-creator-info",
+  "name": "retrieve-jira-issue",
   "version": "0.0.0",
   "private": true,
-  "description": "Getting pull request creator informations",
+  "description": "an action to retrieve jira issue from a branch name",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
