--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@actions/core": "^1.8.2",
     "@actions/github": "^5.0.3",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "match-all": "^1.2.6"
   },
   "devDependencies": {
     "@types/node": "^16.10.5",
