--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,8 @@ jobs:
         with:
           JIRA_ISSUE_API_URL: ${{secrets.JIRA_ISSUE_API_URL}}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          BRANCH_NAME: feat/TO-169-branch-name-TO-168
           JIRA_AUTH_TOKEN: ${{ secrets.JIRA_AUTH }}
           FETCH_ON_MERGE_PR: false
       - name: Get jira issues
         run: |
-          echo "raw output ${{ steps.retrieve_jira_issue.outputs.rawIssues }}"
+          echo `raw output ${{ steps.retrieve_jira_issue.outputs.rawIssues }}`
