--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses:  thomaseizinger/create-pull-request@master
-        with:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          head: ${{ github.ref }}
-          base: main
-          title: "PR title"
-          body: "> test body"
+      # - uses:  thomaseizinger/create-pull-request@master
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      #     head: ${{ github.ref }}
+      #     base: main
+      #     title: "PR title"
+      #     body: "> test body"
